# CommonGL

./: CMakeLists.txt  README.md
GLFilters/: CMakeLists.txt  GLFilters.py
Isobrush/: CMakeLists.txt  Isobrush.py
ShadedActor/: CMakeLists.txt  qSlicerShadedActorModule.cxx  qSlicerShadedActorModule.h  qSlicerShadedActorModuleWidget.cxx  qSlicerShadedActorModuleWidget.h
ShadedActor/Logic/: CMakeLists.txt  vtkOpenGLShadedActor.cxx  vtkOpenGLShadedActor.h  vtkOpenGLShaderComputation.cxx  vtkOpenGLShaderComputation.h  vtkOpenGLTextureImage.cxx  vtkOpenGLTextureImage.h  vtkSlicerShadedActorLogic.cxx  vtkSlicerShadedActorLogic.h
ShadedActor/Resources/: qSlicerShadedActorModule.qrc
ShadedActor/Resources/UI/: qSlicerShadedActorFooBarWidget.ui  qSlicerShadedActorModuleWidget.ui
ShadedActor/Widgets/: qSlicerShadedActorFooBarWidget.cxx  qSlicerShadedActorFooBarWidget.h
ShadedModels/: CMakeLists.txt  ShadedModels.py
ShaderComputation/: CMakeLists.txt  ShaderComputation.py
